Rewrite README: paragraph-per-language format (8 languages)